# aoc_2024

./: Cargo.toml
inputs/: day_01.ron  day_02.ron  day_03.ron  day_04.ron  day_05.ron  day_06.ron  day_07.ron  day_08.ron  day_09.ron  day_24.ron
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_21.rs  lib.rs
