[package]
name = "waridley-aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
nom = "8.0.0-alpha2"
ron = "0.9.0-alpha.0"
serde = { version = "1.0.215", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
itertools = "0.13.0"

[profile.test]
opt-level = 3
